# PaperTeacher

./: .gitignore  README.md  pyproject.toml
config/: podcast_config.yaml  preferred.example.yaml  profile.example.md
openclaw/: SKILL.md
paperteacher/: __init__.py  audio.py  cli.py  discovery.py  domain.py  models.py  outlines.py  paths.py  preferred.py  profile.py  prompts.py  reader.py  server.py  state.py  storage.py  tts.py
paperteacher/domains/: __init__.py  _arxiv_rss.py  _common.py  _html.py  _prompts.py  _semantic_scholar.py
paperteacher/domains/econ/: __init__.py  discovery.py  models.py  prompts.py  reader.py
paperteacher/domains/math/: __init__.py  discovery.py  models.py  prompts.py  reader.py
paperteacher/domains/ml/: __init__.py  discovery.py  models.py  prompts.py  reader.py
paperteacher/domains/neuro/: __init__.py  discovery.py  models.py  prompts.py  reader.py
paperteacher/domains/physics/: __init__.py  discovery.py  models.py  prompts.py  reader.py
skills/paper_teacher/: SKILL.md
tests/: conftest.py  test_discovery.py  test_domain.py  test_econ.py  test_models.py  test_neuro.py  test_physics.py  test_preferred.py  test_prompts_render.py  test_reader.py  test_semantic_scholar.py  test_storage.py  test_token_diet.py  test_tts.py
