[project]
name = "paperteacher"
version = "0.2.0"
description = "MCP server: discover, summarize, and narrate research papers as a daily technical podcast (3-stage decompose-then-execute pipeline, pluggable TTS)."
requires-python = ">=3.11"
dependencies = [
    # core
    "mcp>=1.2.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    # discovery + reading
    "httpx>=0.27",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    # audio orchestration (encoding/stitching, backend-agnostic)
    "numpy>=1.26",
    "soundfile>=0.12",
    "pydub>=0.25",
]

[project.optional-dependencies]
tts-kokoro = ["kokoro>=0.7"]
tts-vertex = ["google-cloud-texttospeech>=2.16"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
paperteacher = "paperteacher.server:main"
paperteacher-cli = "paperteacher.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paperteacher"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
